apps/default/the-academic-editorial/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-academic-editorial
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Academic paper conversion platform
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: mdi-file-document-edit
    gethomepage.dev/name: The Academic Editorial
spec:
  rules:
    - host: editorial.$(DNS)
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: academic-editorial
                port:
                  number: 80
